--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,14 @@ jobs:
        steps:
          - name: Git clone repository
            uses: actions/checkout@v1
+
+         - name: Build and Push Docker Image
+           uses: mr-smithers-excellent/docker-build-push@v4
+           with:
+             image: mohitkakkar94/stockpocket
+             registry: docker.io
+             username: ${{ secrets.DOCKER_USERNAME }}
+             password: ${{ secrets.DOCKER_PASSWORD }}
             
          - name: Create ZIP deployment package
            run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./  -x  *.git*
