--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
            uses: mr-smithers-excellent/docker-build-push@v4
            with:
              image: mohitkakkar94/stockpocket
-             tags: latest
+             tag: latest
              registry: docker.io
              username: ${{ secrets.DOCKER_USERNAME }}
              password: ${{ secrets.DOCKER_PASSWORD }}
