--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
              password: ${{ secrets.DOCKER_PASSWORD }}
              
          - name: Pull docker image
-           run: docker pull ghcr.io/OWNER/IMAGE_NAME:latest
+           run: docker pull ghcr.io/mohitkakkar94/stockpocket:latest
             
          - name: Create ZIP deployment package
            run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./  -x  *.git*
